# parrot

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  main.rs  pipeline.rs  settings.rs  stt.rs  tts.rs
